fixed whitespace

--- a/styles/personality_test.css
+++ b/styles/personality_test.css
@@ -41,7 +41,7 @@ footer {
 }
 
 .whitespace {
-   width: 900px;
+   width: 80vw;
    margin: 5px auto 0 auto;
    background-color: #b7d2e5;
    padding: 2px 3% 30px 3%;
